# xvoice

./: .cvsignore  AUTHORS  CODEGUIDE  COMMANDS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  libtool  mkinstalldirs  vimcmds  xvoice.spec.in  xvoice.xml
modules/: GUI.xml  casespace.xml  cursor-movement.xml  define-emacsediting.xml  define-keys.xml  define-numbers.xml  emacs.xml  general.xml  mouse.xml  netscape.xml  shell.xml  spelling.xml  vim.xml  webdesign.xml  winshortcuts.xml  xvoicegrammar.xml
src/: App.cc  App.h  CorrectionUI.h  Corrector.h  Error.cc  Error.h  EventRecord.h  EventStream.cc  EventStream.h  MainWin.h  Makefile.am  Makefile.in  ParseEventStream.cc  ParseEventStream.h  Target.cc  Target.h  Voice.cc  Voice.h  WordInfo.cc  WordInfo.h  WordInfoQueue.cc  WordInfoQueue.h  gnomeMainWin.cc  kbloop.c  keys.h  mouseGrid.cc  mouseGrid.h  sys.h  wmMainWin.cc  wmgeneral.cc  wmgeneral.h  wmvoice-master.xpm  x.h  xvarts.c  xvesd.c  xvoice.cc  xvoice.h  xvoice.sh  xvoss.c
src/expat/: Makefile.am  Makefile.in
