noinst_LIBRARIES = libexpat.a

EXTRA_DIST = xmltok_impl.c xmltok_ns.c

libexpat_a_SOURCES = hashtable.c xmlparse.c xmlrole.c xmltok.c \
	asciitab.h\
	hashtable.h\
	iasciitab.h\
	latin1tab.h\
	nametab.h\
	utf8tab.h\
	xmldef.h\
	xmlparse.h\
	xmlrole.h\
	xmltok.h\
	xmltok_impl.h
AM_CFLAGS          = $(XV_CFLAGS) 
AM_CXXFLAGS        = $(XV_CXXFLAGS) 
